--- a/assets/styles/claris/_syntax.sass
+++ b/assets/styles/claris/_syntax.sass
@@ -19,9 +19,9 @@ code
     // line-break: anywhere
     padding: 0.0625rem 0.25rem
     vertical-align: 7%
-    border: 0.05rem solid var(--text-opa-80)
+    border: 0.05rem solid rgba(var(--RGB_text), 80%)
     border-radius: 0.125rem
-    background-color: var(--text-opa-20)
+    background-color: rgba(var(--RGB_text), 20%)
 pre
   code
     display: block
@@ -193,11 +193,11 @@ pre
   font-weight: var(--font-weight-code)
 
 .cp, .cpf
-  color: #cd2828
+  color: #d93f3f
   font-weight: var(--font-weight-code)
 
 .gd, .gr
-  color: #d22323
+  color: #de3b3b
 
 .ge
   font-style: italic
@@ -219,7 +219,7 @@ pre
   font-weight: var(--font-weight-code)
 
 .gt
-  color: #d22323
+  color: #de3b3b
 .w
   color: #666
 
